--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ section {
   margin-top: 1rem;
   padding: .8rem 2.8rem;
   border-radius: 5rem;
-  border-top-left-radius: 0;
+  /* border-top-left-radius: 0; */
   border: 0.2rem solid #130f40;
   cursor: pointer;
   background: none;
@@ -115,7 +115,7 @@ section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 2rem 9%;
+  padding: 1.2rem 9%;
   -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
           box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
   position: fixed;
@@ -149,7 +149,10 @@ section {
 }
 
 .header .navbar a:hover {
-  color: #e67e22;
+  color: #fff;
+  padding: 4px 6px;
+  background: #e67e22;
+  border-radius: 20px;
 }
 
 .header .icons a,
@@ -266,7 +269,7 @@ section {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  background: url(../image/home_bg_img.jpg) no-repeat;
+  background: url(../image/pet_bg_2b_done.jpg) no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
@@ -274,6 +277,7 @@ section {
 
 .home .content {
   width: 50rem;
+  opacity: 0%;
 }
 
 .home .content h3 {
@@ -301,7 +305,7 @@ section {
 
 .home .wave {
   position: absolute;
-  bottom: 0;
+  bottom: -25px;
   left: 0;
   width: 100%;
   height: 12rem;
@@ -467,7 +471,7 @@ section {
 .shop .box-container .box .icons {
   position: absolute;
   top: 1rem;
-  right: 2rem;
+  right: 0.5rem;
   z-index: 10;
   -webkit-transform: translateX(10rem);
           transform: translateX(10rem);
@@ -480,14 +484,14 @@ section {
   line-height: 5rem;
   font-size: 2.2rem;
   margin-top: 1rem;
-  background: #fff;
+  /* background: #fff; */
   color: #130f40;
   text-align: center;
 }
 
 .shop .box-container .box .icons a:hover {
   color: #fff;
-  background: #e67e22;
+  /* background: #e67e22; */
 }
 
 .shop .box-container .box .content {
