--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,7 @@ section {
 }
 
 .shop .box-container .box .content h3 {
+  cursor: pointer;
   font-size: 2.2rem;
   color: #130f40;
   padding-bottom: .5rem;
@@ -802,3 +803,70 @@ section {
   }
 }
 /*# sourceMappingURL=style.css.map */
+/* .wrap-item {
+  position: relative;
+}
+
+.owl-carousel {
+  display: none;
+  position: relative;
+  width: 100%;
+  -ms-touch-action: pan-y;
+}
+
+.owl-carousel .owl-wrapper-outer {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.item-adv-footer .info-adv-footer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  /* opacity: 0; */
+  /* visibility: hidden; */
+  /* transform: rotate(-90deg) translate(-60px,-60px);
+  -webkit-transform: rotate(-90deg) translate(-60px,-60px);
+}
+.item-adv-footer:hover 
+.info-adv-footer {
+  opacity: 1;
+  visibility: visible;
+  transform: rotate(0) translate(0,0);
+  -webkit-transform: rotate(0) translate(0,0);
+} */
+
+.ft_container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 36px;
+}
+.item-adv-footer {
+  /* flex-basis: 30%; */
+}
+.info-adv-footer {
+  text-align: center;
+  transition: all 0.3s ease-out 0s;
+  opacity: 0;
+  visibility: hidden;
+  transform: rotate(-90deg) translate(-60px,-60px);
+}
+.item-adv-footer:hover 
+.info-adv-footer {
+  opacity: 1;
+  visibility: visible;
+  transform: rotate(0) translate(0,0);
+}
+.info-adv-footer .title18 {
+  font-size: 24px;
+}
+.info-adv-footer .desc {
+  font-size: 18px;
+}
+.adv_img {
+  height: 150px;
+  width: auto;
+}
